opam-version: "2.0"
version: "2.04"
maintainer: "https://github.com/ocaml/opam-repository/issues"
authors: ["Julien Signoles"]
homepage: "http://calendar.forge.ocamlcore.org/"
bug-reports: "https://github.com/ocaml-community/calendar/issues"
dev-repo: "git+https://github.com/ocaml-community/calendar.git"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
build: [
  ["./configure"]
  [make]
]
remove: [["ocamlfind" "remove" "calendar"]]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
install: [make "install"]
synopsis: "Library for handling dates and times in your program"
flags: light-uninstall
